--- a/package.json
+++ b/package.json
@@ -4,14 +4,28 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "@babel/core": "^7.1.2",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-jest": "^23.6.0",
     "webpack-cli": "^3.1.2"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.1.0",
     "webpack": "^4.20.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "webpack": "webpack"
+  },
+  "babel": {
+    "presets": [
+      "@babel/preset-env"
+    ]
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.js$": "babel-jest"
+    }
   },
   "author": "",
   "license": "ISC"
