--- a/package.json
+++ b/package.json
@@ -7,12 +7,18 @@
     "webpack-cli": "^3.1.2"
   },
   "devDependencies": {
-    "webpack": "^4.20.2"
+    "deck-of-cards": "^0.1.8",
+    "webpack": "^4.20.2",
+    "webpack-dev-server": "^3.1.9"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "webpack": "webpack"
+    "webpack": "webpack",
+    "dev": "webpack-dev-server --mode development"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "prettier": {
+    "singleQuote": true
+  }
 }
